# llm-coding-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  bench.py  pyproject.toml  requirements.txt
references/: dataset-quirks.md
scripts/: chart.py  create_db.py  store_results.py
skill/references/: api-key-patterns.md
skills/llm-benchmark/: SKILL.md
src/llm_benchmark/: __init__.py  bench.py  chart.py  create_db.py  store_results.py
